feat: implement financial entry approval workflow and refactor finance module