@@ -1,19 +1,27 @@
 package com.marine.management.modules.finance.application.dto;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 /**
  * Pivot tree node for hierarchical monthly breakdown.
  *
+ * <p>Represents a node in the pivot report tree structure:
+ * <ul>
+ *   <li>Level 1: Main Category</li>
+ *   <li>Level 2: Category</li>
+ *   <li>Level 3: Who (Person/Company)</li>
+ * </ul>
+ *
  * @param id Category/MainCategory/Who ID
- * @param level 1=MainCategory, 2=Category, 3=Who
- * @param type "MAIN_CATEGORY", "CATEGORY", "WHO"
+ * @param level Node level (1-3)
+ * @param type Node type ("MAIN_CATEGORY", "CATEGORY", "WHO")
  * @param name Turkish name
  * @param nameEn English name
- * @param isTechnical Technical category flag
- * @param monthlyValues Monthly amounts ("01" -> amount, "02" -> amount, ...)
+ * @param technical Technical category flag
+ * @param monthlyValues Monthly amounts (e.g., "01" -> amount, "02" -> amount)
  * @param children Child nodes (empty for WHO level)
  */
 public record PivotTreeNodeDTO(
@@ -26,15 +34,17 @@ public record PivotTreeNodeDTO(
         Map<String, BigDecimal> monthlyValues,
         List<PivotTreeNodeDTO> children
 ) {
-    // Compact constructor ile validation
+    /**
+     * Compact constructor ensuring immutability and null-safety.
+     */
     public PivotTreeNodeDTO {
-        if (level < 1 || level > 3) {
-            throw new IllegalArgumentException("Level must be 1-3");
-        }
-        if (!List.of("MAIN_CATEGORY", "CATEGORY", "WHO").contains(type)) {
-            throw new IllegalArgumentException("Invalid type: " + type);
-        }
-        monthlyValues = Map.copyOf(monthlyValues);  // Immutability
-        children = List.copyOf(children);
+        // Ensure immutability
+        monthlyValues = monthlyValues != null
+                ? Map.copyOf(monthlyValues)
+                : Collections.emptyMap();
+
+        children = children != null
+                ? List.copyOf(children)
+                : Collections.emptyList();
     }
 }
